# Endive

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  LICENSE  README.md  dune-project  endive.opam  endive.opam.locked  flake.nix  grammaire_tuto  package-lock.json  package.json
.github/workflows/: build-and-test.yml  ci.yml  deploy.yml
GUI/CodeMirror/: README.md  editor.mjs  package.json
GUI/Software/: README.md  index.js  package.json  preload.js
app/src/: index.js
crates/endive-lambda/: Cargo.toml
crates/endive-parse/: Cargo.toml
crates/endive-wasm/: .gitignore  Cargo.toml
docs/: grammar-ideas.txt
editor/: .parcelrc  README.md  package.json
editor/src/: index.html
editor2/: package-lock.json  package.json  tsconfig.json
editor2/src/: index.css  index.html  index.ts  term.ts
endive/: lexer.mll  parser.mly  stmt.ml  term.ml  validate.ml
endive-engine/: Cargo.toml
endive-engine/src/: lib.rs
endive-gui/CodeMirror/: README.md  index.html  package.json  rollup.config.mjs  (+2 more)
endive-kernel/: Cargo.toml
endive-lsp-server/: README.md  main.ml  run
endive-playground/: .gitignore  README.md  package.json
endive-print/: Cargo.toml
endive-stmt/: Cargo.toml
endive-vscode/: CHANGELOG.md  README.md  endive-configuration.json  endive.tmLanguage.json  package-lock.json  package.json
example/: README.md  package.json
lib/: dune  lexer.mll  parser.mly  term.ml
test/: dune
vscode/: endive-configuration.json  package-lock.json  package.json
vscode-plugin/: .eslintrc.json  .gitignore  package.json  tsconfig.json
website/: package.json
(+95 files in other folders)
